--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -4,7 +4,7 @@
 }
 
 .main {
-  min-height: 100vh;
+  min-height: 97vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,4 +18,12 @@
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+}
+
+.products {
+  margin: 0 100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 100px;
 }
