--- a/client/styles/Product.module.css
+++ b/client/styles/Product.module.css
@@ -1,21 +1,21 @@
 .product {
     border: 1px solid red;
     min-width: 400px;
+    font-weight: bold;
 }
 
 .product h1 {
-    color: #ffffff;
+    color: black;
 }
 
 .product p {
-    color: #fff000;
+    color: orange;
 }
 
 .product button {
     width: 100%;
     height: 30px;
     font-size: 20px;
-    font-weight: bold;
 }
 
 .available {
