--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -19,3 +19,10 @@
   justify-content: center;
   gap: 100px;
 }
+
+.searchField {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0px;
+}
