--- a/client/styles/Messages.module.css
+++ b/client/styles/Messages.module.css
@@ -1,11 +1,16 @@
-.container {
-    width: 300px;
-    height: 100px;
-    border-color: orange;
-    border-width: 1px;
-    border-style: solid;
+.modalBackground {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+}
+
+.modalContainer {
+    padding: 20px;
+    background-color: white;
+    color: black;
+    text-align: center;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
